<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_background"
        android:alpha="0.90"
        android:contentDescription="@string/background_image_alt_title"/>

    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_today_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_default_day"
            style="@style/TitleTextStyle"/>

        <TextView
            android:id="@+id/home_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_default_date"
            style="@style/SubtitleTextStyle"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/home_today_weather_fragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="@dimen/default_margin"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/default_radius"
        app:layout_constraintEnd_toEndOf="@+id/home_layout"
        app:layout_constraintStart_toStartOf="@+id/home_layout"
        app:layout_constraintTop_toBottomOf="@+id/home_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/glass_container">

                <TextView
                    android:id="@+id/home_default_realtime_temp"
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/home_default_realtime_temp"
                    app:layout_constraintEnd_toStartOf="@+id/view2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home"
                    style="@style/SubtitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_default_realtime_felt_temp"
                    app:layout_constraintEnd_toStartOf="@+id/view2"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/home_default_realtime_temp" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="4dp"
                    android:layout_height="170dp"
                    android:background="@drawable/glass_divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/home_today_weather_icon"
                    android:layout_width="140dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sunny_rain"
                    app:layout_constraintEnd_toStartOf="@+id/view2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <ImageView
                    android:id="@+id/min_temp_icon"
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/min_temp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/home_default_min_temp"
                    style="@style/DetailTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mini_margin"
                    android:text="@string/home_default_min_temp"
                    app:layout_constraintBottom_toBottomOf="@+id/min_temp_icon"
                    app:layout_constraintStart_toEndOf="@+id/min_temp_icon"
                    app:layout_constraintTop_toTopOf="@+id/min_temp_icon" />

                <ImageView
                    android:id="@+id/max_temp_icon"
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/item_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/max_temp"
                    app:layout_constraintBottom_toBottomOf="@+id/min_temp_icon"
                    app:layout_constraintStart_toEndOf="@+id/home_default_min_temp"
                    app:layout_constraintTop_toTopOf="@+id/min_temp_icon"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/home_default_max_temp"
                    style="@style/DetailTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mini_margin"
                    android:text="@string/home_default_max_temp"
                    app:layout_constraintBottom_toBottomOf="@+id/max_temp_icon"
                    app:layout_constraintStart_toEndOf="@+id/max_temp_icon"
                    app:layout_constraintTop_toTopOf="@+id/max_temp_icon" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/wind"
                    app:layout_constraintBottom_toBottomOf="@+id/home_default_realtime_temp"
                    app:layout_constraintStart_toEndOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="@+id/home_default_realtime_temp" />

                <TextView
                    android:id="@+id/home_default_wind"
                    style="@style/DetailTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/item_margin"
                    android:text="@string/home_default_wind"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/humidity"
                    app:layout_constraintBottom_toTopOf="@+id/min_temp_icon"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/home_default_humidity"
                    style="@style/DetailTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/item_margin"
                    android:text="@string/home_default_humidity"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="@+id/imageView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/home_week_weather_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_margin"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/default_radius"
        app:layout_constraintEnd_toEndOf="@+id/home_today_weather_fragment"
        app:layout_constraintStart_toStartOf="@+id/home_today_weather_fragment"
        app:layout_constraintTop_toBottomOf="@+id/home_today_weather_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/glass_container"/>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>